--- a/package.json
+++ b/package.json
@@ -19,25 +19,34 @@
   },
   "homepage": "https://github.com/hiyelbaz/valuetics-app#readme",
   "dependencies": {
-
-    "bcrypt": "^2.0.0",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "express": "^4.16.3",
+    "jwt-simple": "^0.5.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^7.4.1",
     "reflect-metadata": "^0.1.12",
-    "typeorm": "^0.1.20",
-    "typeorm-linq-repository": "^1.0.0-alpha.3"
+    "typeorm": "0.2.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
+    "@types/body-parser": "^1.17.0",
     "@types/compression": "0.0.36",
     "@types/express": "^4.11.1",
-    "@types/node": "^9.6.2",
-    "@types/passport": "^0.4.4",
+    "@types/jwt-simple": "^0.5.33",
+    "@types/node": "^9.6.6",
+    "@types/passport": "^0.4.5",
+    "@types/passport-facebook": "^2.1.8",
+    "@types/passport-google-oauth": "^1.0.38",
+    "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
-    "@types/pg": "^7.4.5",
-    "@types/body-parser": "^1.16.8"
+    "@types/passport-twitter": "^1.0.34",
+    "@types/pg": "^7.4.7"
   }
 }
